# purrr

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: purrr.pc.in  purrrConfig.cmake.in
example/: CMakeLists.txt  main.c
example/assets/: vertexShader.vert
examples/: CMakeLists.txt
examples/assets/: chp.frag
examples/chp/: CMakeLists.txt  main.c
examples/chppp/: CMakeLists.txt  main.cpp
include/purrr/: buffer.h  context.h  export.h  format.h  image.h  program.h  purrr.h  renderTarget.h  renderer.h  result.h  sampler.h  window.h
include/purrrpp/: buffer.hpp  context.hpp  format.hpp  image.hpp  program.hpp  programBuilder.hpp  purrr.hpp  renderTarget.hpp  renderer.hpp  result.hpp  sampler.hpp  window.hpp
src/: buffer.c  context.c  image.c  internal.c  internal.h  program.c  renderTarget.c  renderer.c  result.c  sampler.c  window.c
src/vulkan/: buffer.c  buffer.h  context.c  context.h  format.c  format.h  image.c  image.h  program.c  program.h  renderTarget.c  renderTarget.h  renderer.c  renderer.h  sampler.c  sampler.h  vulkan.c  vulkan.h  window.c  window.h
src/win32/: window.c  window.h
